--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="main-header clearfix">
+    <header class="main-header">
         <h1 class="name"><a href="#">Best City Guide</a></h1>
         <ul class="main-nav">
             <li><a href="#">ice cream</a></li>
