--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <!--/.primary-->
 
-    <div class="tertiary col">
+    <div class="tertiary col clearfix">
         <h2>How to get here</h2>
         <p><strong>Plane: </strong>Tiramisu caramels gummies chupa chups lollipop muffin. Jujubes chocolate caramels
             cheesecake brownie lollipop drag&#233;e cheesecake.</p>
@@ -59,7 +59,7 @@
     </div>
     <!--/.tertiary-->
 
-    <footer class="main-footer">
+    <footer class="main-footer clearfix">
         <span>&copy;2015 Residents of The Best City Ever.</span>
     </footer>
 
